# drafts_ws

install/: local_setup.sh  setup.sh
install/my_box_bot_description/share/ament_index/resource_index/parent_prefix_path/: my_box_bot_description
install/my_box_bot_description/share/my_box_bot_description/: package.sh
install/my_box_bot_description/share/my_box_bot_description/launch/: publish_urdf.launch.py
install/my_box_bot_gazebo/share/ament_index/resource_index/package_run_dependencies/: my_box_bot_gazebo
install/my_box_bot_gazebo/share/ament_index/resource_index/parent_prefix_path/: my_box_bot_gazebo
install/my_box_bot_gazebo/share/my_box_bot_gazebo/: local_setup.sh  package.sh
install/my_box_bot_gazebo/share/my_box_bot_gazebo/models/tf_plugin/: tf_plugin.cpp
install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key  turtlesim_node
install/turtlesim/share/ament_index/resource_index/parent_prefix_path/: turtlesim
install/turtlesim/share/turtlesim/: local_setup.sh  package.sh
install/turtlesim/share/turtlesim/cmake/: turtlesim__rosidl_generator_cExport.cmake  turtlesim__rosidl_typesupport_cExport.cmake  turtlesim__rosidl_typesupport_cppExport.cmake  turtlesim__rosidl_typesupport_introspection_cExport.cmake
log/: latest_build  latest_list
src/my_box_bot_description/: CMakeLists.txt  package.xml
src/my_box_bot_description/urdf/: box_bot_basic.urdf
src/my_box_bot_gazebo/: CMakeLists.txt  package.xml
src/my_box_bot_gazebo/launch/: spawn_robot_ros2.launch.xml
src/my_box_bot_gazebo/models/tf_plugin/: tf_plugin.hpp
